Fixed a gap issue withe the menu bar

--- a/project01/project1.css
+++ b/project01/project1.css
@@ -1,25 +1,40 @@
 body{
 	background-color:#A8A8A8;
-	font-family:"Helvetica","sans-serif";
+	font-family:"Arial","sans-serif";
 }
 
 div.main{
 	background-color:#FBFBFB;
 	margin-left:3%;
 	margin-right:3%;
+	margin-top:-30px;
+	border-style:solid;
+	border-width:1px;
 }	
 
 div.banner{
 	background-color:#CACACA;
+	padding-bottom:.5em;
+	font-weight:900;
 }
 
 #title{
-	color:blue;
+	margin-bottom:0px;
+	margin-left:10px;
+	letter-spacing:-2px;
+	font-size:33px;
+}
+
+#subtitle{
+	color:gray;
+	font-size:.75em;
+	margin-left:10px;
+	margin-top:-2em;
 }
 
 div.menuBar{
 	background-color:black;
-	margin:0;
+	margin-bottom:-15px;
 }
 
 div.menuBar ul{
@@ -62,6 +77,18 @@ div.menuBar a:hover span{
 	background:#FFFFE1;
 	color:black;
 }
+
+div.userInput{
+	margin-left:10px;
+	width:50%;
+}
+
+div.userInput #button{
+	font-size:75%;
+	margin-left:46%;
+	margin-top:10px;
+}
+
 
 div.currentProgress{
 	background-color:#F0EEFE;
